# PI-3

./: .gitignore  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  test
alexandria/: constants.py  context_processors.py  forms.py  models.py  settings.py  urls.py  utils.py
alexandria/management/commands/: create_books.py  create_users.py
alexandria/migrations/: 0001_initial.py  0002_alter_interesse_options_interesse_status_and_more.py  0003_remove_interesses_unique_interesse_and_more.py  0004_alter_usuario_zona.py  0005_alter_interesses_options_remove_troca_id_livro_and_more.py
alexandria/tags/: custom_filters.py
alexandria/templates/: addBook.html  base.html  book.html  error.html  explore.html  home.html  howItWorks.html  interest.html  login.html  profile.html  rateExchange.html  signin.html
alexandria/templates/includes/: addBookButton.html  changeDialog.html  footer.html  header.html
alexandria/views/: addBooks.py  auth.py  book.py  explore.py  interest.py  profile.py  views.py
